Added jwt generation logic

--- a/SimpleBankApp/SimpleBankApp.Api/appsettings.json
+++ b/SimpleBankApp/SimpleBankApp.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTSettings": {
+    "Secret": "my_secret_key_123456789012345678901234567890",
+    "ExpirationTimeInMinutes": "60",
+    "Issuer": "RonCG",
+    "Audience": "RonCG"
+  }
 }
