--- a/SimpleBankApp/SimpleBankApp.Infrastructure/SimpleBankApp.Infrastructure.csproj
+++ b/SimpleBankApp/SimpleBankApp.Infrastructure/SimpleBankApp.Infrastructure.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SimpleBankApp.Application\SimpleBankApp.Application.csproj" />
   </ItemGroup>
 
