added db scripts, LINQ2DB as ORM and implemented userRepository

--- a/SimpleBankApp/SimpleBankApp.Api/appsettings.json
+++ b/SimpleBankApp/SimpleBankApp.Api/appsettings.json
@@ -11,5 +11,9 @@
     "ExpirationTimeInMinutes": "60",
     "Issuer": "RonCG",
     "Audience": "RonCG"
+  },
+  "DBSettings": {
+    "Provider": "SqlServer",
+    "ConnectionString": "Server=localhost;Initial Catalog=SimpleBankDB;Persist Security Info=False;User ID=SimpleBankDBLogin;Password=1234!"
   }
 }
