--- a/SimpleBankApp/SimpleBankApp.Infrastructure/SimpleBankApp.Infrastructure.csproj
+++ b/SimpleBankApp/SimpleBankApp.Infrastructure/SimpleBankApp.Infrastructure.csproj
@@ -7,14 +7,38 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.2" />
+    <PackageReference Include="linq2db" Version="2.9.2" />
+    <PackageReference Include="linq2db.sqlserver" Version="2.9.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleBankApp.Application\SimpleBankApp.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Persistance\Linq2DB\SimpleBankDBConfig.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>SimpleBankDBConfig.generated.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Persistance\Linq2DB\SimpleBankDBConfig.generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SimpleBankDBConfig.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
