--- a/SimpleBankApp/SimpleBankApp.Api/appsettings.json
+++ b/SimpleBankApp/SimpleBankApp.Api/appsettings.json
@@ -1,9 +1,32 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Work\\Logs\\logs.txt",
+          "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}{Exception:1}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://runtracker.seq:5341"}
+      }
+    ],
+    "Enrich":  [ "FromLogContext", "WithMachineName", "WithThreadId"]
   },
   "AllowedHosts": "*",
   "JWTSettings": {
