fixed Seq config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     ports:
       - 5341:5341
       - 8081:80
+    networks:
+      - simplebankapp-network
 
 networks:
   simplebankapp-network:
