--- a/SimpleBankApp/SimpleBankApp.Api/appsettings.json
+++ b/SimpleBankApp/SimpleBankApp.Api/appsettings.json
@@ -17,7 +17,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "C:\\Work\\Logs\\logs.txt",
+          "path": "C:\\Work\\Logs\\logs.txt"
         }
       },
       {
